@@ -2,7 +2,7 @@
  *   This file was automatically generated by version 1.7 of cextract.
  *   Manual editing not recommended.
  *
- *   Created: Tue Jan 30 21:32:34 2001
+ *   Created: Sun Feb 11 14:47:30 2001
  */
 #ifndef __CEXTRACT__
 #ifdef __STDC__
@@ -27,7 +27,6 @@ extern void bottom_right_centered_onion ( char **maze, int xsize, int ysize, int
 extern char **map_gen_spiral ( int xsize, int ysize, int option );
 extern void connect_spirals ( int xsize, int ysize, int sym, char **layout );
 extern char **maze_gen ( int xsize, int ysize, int option, RMParms *RP );
-extern char **make_snake_layout ( int xsize, int ysize, int option );
 extern void make_wall_free_list ( int xsize, int ysize );
 extern void pop_wall_point ( int *x, int *y );
 extern int find_free_point ( char **maze, int *x, int *y, int xc, int yc, int xsize, int ysize );
@@ -76,9 +75,13 @@ extern void place_fountain_with_specials ( mapstruct *map );
 extern void place_special_exit ( mapstruct * map, int hole_type, RMParms *RP );
 extern void place_specials_in_map ( mapstruct *map, char **layout, RMParms *RP );
 extern int select_regular_files ( const struct dirent *the_entry );
+extern mapstruct *load_style_map ( char *style_name );
 extern mapstruct *find_style ( char *dirname, char *stylename, int difficulty );
 extern object *pick_random_object ( mapstruct *style );
 extern char **roguelike_layout_gen ( int xsize, int ysize, int options );
+extern char **make_snake_layout ( int xsize, int ysize, int options );
+extern void find_top_left_corner ( char **maze, int *cx, int *cy );
+extern char **make_square_spiral_layout ( int xsize, int ysize, int options );
 
 #endif /* __STDC__ */
 #endif /* __CEXTRACT__ */
